--- a/index.html
+++ b/index.html
@@ -3,69 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
+    <title>Home - Student Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <div class="container">
-            <h1>[Your Name]</h1>
-            <p>Student | AI, Machine Learning & NLP Enthusiast</p>
-        </div>
+        <h1>[Your Name]</h1>
+        <p>Student | AI, Machine Learning & NLP Enthusiast</p>
+        <nav>
+            <a href="index.html" class="active">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
 
     <div class="container">
-        
-        <section id="about">
+        <section>
             <h2>About Me</h2>
-            <p>Hello! I am a passionate student eager to solve complex problems through code. I am currently focusing on expanding my knowledge in artificial intelligence and natural language processing. I enjoy building efficient algorithms, analyzing data, and continuously learning new technologies.</p>
+            <p>Hello! I am a passionate student eager to solve complex problems through code. I am currently focusing on expanding my knowledge in artificial intelligence and natural language processing.</p>
+            <p>I enjoy building efficient algorithms, analyzing data, and continuously learning new technologies. In my free time, I contribute to open source and read research papers on deep learning.</p>
         </section>
-
-        <section id="projects">
-            <h2>Featured Projects</h2>
-            <div class="project-grid">
-                
-                <div class="project-card">
-                    <h3>NLP Text Summarizer</h3>
-                    <p>Developed a script that takes long-form articles and extracts the most relevant sentences to create a concise summary.</p>
-                    <div class="tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">NLP</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <h3>Machine Learning Classifier</h3>
-                    <p>Trained a neural network to classify datasets with high accuracy, optimizing hyperparameters for better performance.</p>
-                    <div class="tags">
-                        <span class="tag">TensorFlow</span>
-                        <span class="tag">Data Analysis</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <h3>Logic Puzzle Solver</h3>
-                    <p>Created a program that resolves complex logical constraints and constraints satisfaction problems efficiently.</p>
-                    <div class="tags">
-                        <span class="tag">Prolog</span>
-                        <span class="tag">Logic</span>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-        <section id="contact">
-            <h2>Get In Touch</h2>
-            <p>I am always open to discussing tech, collaborating on projects, or exploring internship opportunities.</p>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
-                <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></li>
-            </ul>
-        </section>
-
     </div>
 
     <footer>
